      in the network. Implements proposal 107, suggested by Kevin Bauer
      and Damon McCoy.

  o Minor features (build):
    - Make autoconf search for libevent, openssl, and zlib consistently.
    - Update deprecated macros in configure.in
    - When warning about missing headers, tell the user to let us
      know if the compile succeeds anyway, so we can downgrade the
      warning.
    - If we're building from a subversion checkout or an SVK mirror, include
      the current SVN revision as part of the version string.

  o Minor features (logging):
    - Always prepend "Bug: " to any log message about a bug.
    - Put a platform string (e.g. "Linux i686") in the startup log
      message, so when people paste just their logs, we know if it's
      openbsd or windows or what.

  o Minor features (directory system):
    - Directory authorities accept and serve "extra info" documents for
      routers.  These documents contain fields from router descriptors that
      aren't usually needed, and that use a lot of excess bandwidth. Once
      these fields are removed from router descriptors, the bandwidth savings
      should be about 60%.  (Limitation: servers do not yet upload extra-info
      documents; authorities do not yet cache them.)  [Partially implements
      proposal 104.]

  o Minor features (other):
    - More unit tests.

  o Removed features:
    - Removed support for the old binary "version 0" controller protocol.
      This has been deprecated since 0.1.1, and warnings have been issued
      since 0.1.2.  When we encounter a v0 control message, we now send back
      an error and close the connection.
    - Remove the old "dns worker" server DNS code: it hasn't been default
      since 0.1.2.2-alpha, and all the servers seem to be using the new
      eventdns code.

  o Minor bugfixes (portability):
    - Even though windows is equally happy with / and \ as path separators,