@@ -26,38 +26,38 @@ test_SOURCES = buffers.c circuitbuild.c circuitlist.c \
 
 test_LDADD = ../common/libor.a ../common/libor-crypto.a
 
-noinst_HEADERS = or.h eventdns.h eventdns_tor.h
+noinst_HEADERS = or.h eventdns.h eventdns_tor.h micro-revision.i
 
 tor_main.o: micro-revision.i
 
 micro-revision.i: FORCE
-	rm -f micro-revision.i;					\
 	if test -d ../../.svn ; then 				\
 	  svn info ../.. |              			\
 	  sed -n 's/^Revision: \([0-9][0-9]*\).*/"\1"/p' > micro-revision.i \
-	     || true; \
+	     || true;                                           \
 	fi;							\
 	if test ! -f micro-revision.i -a x`which svk` != x; then\
           location=../..;                                       \
           rev=x;                                                \
-          while test x$$rev = xx; do                             \
-            x=`svk info $$location |                             \
+          while test x$$rev = xx; do                            \
+            x=`svk info $$location |                            \
               sed -n 's/^Mirrored From:.*, Rev\. \([0-9][0-9]*\)/\1/p'`; \
-            if test x$$x != x; then                              \
-              rev=$$x;                                           \
+            if test x$$x != x; then                             \
+              rev=$$x;                                          \
               break;                                            \
             else                                                \
-              loc=`svk info $$location |                         \
+              loc=`svk info $$location |                        \
                 sed -n 's/^Copied From: \(.*\), Rev\. [0-9][0-9]*/\1/p'`; \
-              if test x$$loc == x; then                          \
-                rev="";                                         \
+              if test x$$loc = x; then                          \
                 break;                                          \
               else                                              \
-                location=/$$loc;                                 \
+                location=/$$loc;                                \
               fi;                                               \
             fi;                                                 \
           done;                                                 \
-          echo \"$$rev\" > micro-revision.i;                   \
+          if test x$$rev != x; then                             \
+            echo \"$$rev\" > micro-revision.i;                  \
+          fi;                                                   \
         fi;                                                     \
 	if test ! -f micro-revision.i; then			\
 	  echo '""' > micro-revision.i;				\
